fix: 项目启动报错【需要重新运行SQL脚本，需要配置Github Package，总之，这个项目可以跑起来，完全看个人水平，我没有那么多时间写文档，自己多研究】

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application-prod.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application-prod.yml
@@ -96,6 +96,10 @@ spring:
       auto-create: true
     template:
       observation-enabled: true
+  config:
+    import:
+      # 临时配置文件【解决拉取nacos配置文件时，group默认为DEFAULT_GROUP问题】
+      - optional:nacos:laokou-admin.yaml?refreshEnabled=true&group=${NACOS-GROUP}
   cloud:
     nacos:
       discovery:
