fix: 项目启动报错，修改log4j2配置，暴露spanId和traceId

--- a/laokou-common/laokou-common-trace/pom.xml
+++ b/laokou-common/laokou-common-trace/pom.xml
@@ -72,6 +72,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-micrometer-tracing-brave</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-tracing-bridge-brave</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
