--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,8 @@
     <mybatis-plus.version>3.5.15</mybatis-plus.version>
     <!--nacos版本-->
     <nacos.version>3.1.0</nacos.version>
+    <!--micrometer-tracing-bom版本-->
+    <micrometer-tracing.version>1.6.1</micrometer-tracing.version>
     <!--opentelemetry版本-->
     <opentelemetry.version>1.57.0</opentelemetry.version>
     <!--netty版本-->
@@ -402,6 +404,16 @@
         <scope>import</scope>
       </dependency>
       <!-- =============================== 定义 Nacos 版本 =============================== -->
+
+      <!-- =============================== 定义 Micrometer Tracing 版本 =============================== -->
+      <dependency>
+        <groupId>io.micrometer</groupId>
+        <artifactId>micrometer-tracing-bom</artifactId>
+        <version>${micrometer-tracing.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <!-- =============================== 定义 Micrometer Tracing 版本 =============================== -->
 
       <!-- =============================== 定义 Opentelemetry 版本 =============================== -->
       <dependency>
