--- a/laokou-common/laokou-common-grpc/pom.xml
+++ b/laokou-common/laokou-common-grpc/pom.xml
@@ -54,6 +54,12 @@
       <scope>test</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webmvc</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
