--- a/laokou-common/laokou-common-grpc/src/test/resources/application.yml
+++ b/laokou-common/laokou-common-grpc/src/test/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8975
 spring:
   application:
     name: laokou-common-grpc
@@ -11,11 +13,24 @@ spring:
         laokou-common-grpc:
            address: discovery://laokou-common-grpc
            enable-keep-alive: true
+           idle-timeout: 60s
   cloud:
     nacos:
       config:
-        enabled: false
+        enabled: true
+        server-addr: nacos:8848
+        username: nacos
+        password: nacos
+        namespace: public
+        group: DEFAULT_GROUP
+        import-check:
+          enabled: false
       discovery:
         enabled: true
+        server-addr: nacos:8848
+        username: nacos
+        password: nacos
+        namespace: public
+        group: DEFAULT_GROUP
         metadata:
           laokou_common_grpc_grpc_port: 9097
