test: 优化grpc测试用例

--- a/laokou-common/laokou-common-grpc/src/test/resources/application.yml
+++ b/laokou-common/laokou-common-grpc/src/test/resources/application.yml
@@ -14,11 +14,15 @@ spring:
            address: discovery://laokou-common-grpc
            enable-keep-alive: true
            idle-timeout: 60s
+  config:
+    import:
+      # 临时配置文件【解决拉取nacos配置文件时，group默认为DEFAULT_GROUP问题】
+      - optional:nacos:laokou-common-grpc.yaml?refreshEnabled=true&group=DEFAULT_GROUP
   cloud:
     nacos:
       config:
         enabled: true
-        server-addr: nacos:8848
+        server-addr: 127.0.0.1:8848
         username: nacos
         password: nacos
         namespace: public
@@ -27,10 +31,13 @@ spring:
           enabled: false
       discovery:
         enabled: true
-        server-addr: nacos:8848
+        server-addr: 127.0.0.1:8848
         username: nacos
         password: nacos
         namespace: public
         group: DEFAULT_GROUP
         metadata:
-          laokou_common_grpc_grpc_port: 9097
+          grpc_port: 9097
+      username: nacos
+      password: nacos
+      server-addr: 127.0.0.1:8848
