--- a/laokou-service/laokou-mcp/laokou-mcp-server/laokou-mcp-server-infrastructure/pom.xml
+++ b/laokou-service/laokou-mcp/laokou-mcp-server/laokou-mcp-server-infrastructure/pom.xml
@@ -24,6 +24,7 @@
     <dependency>
       <groupId>com.alibaba.cloud.ai</groupId>
       <artifactId>spring-ai-alibaba-starter-mcp-registry</artifactId>
+      <version>1.1.2.0</version>
       <exclusions>
         <exclusion>
           <groupId>com.alibaba.nacos</groupId>
