style: 优化代码风格

--- a/laokou-common/laokou-common-data-cache/pom.xml
+++ b/laokou-common/laokou-common-data-cache/pom.xml
@@ -57,6 +57,10 @@
       <artifactId>laokou-common-redis</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.redisson</groupId>
+      <artifactId>redisson-spring-cache</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
