--- a/pom.xml
+++ b/pom.xml
@@ -479,6 +479,11 @@
         <artifactId>redisson</artifactId>
         <version>${redisson.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.redisson</groupId>
+        <artifactId>redisson-spring-cache</artifactId>
+        <version>${redisson.version}</version>
+      </dependency>
       <!-- =============================== 定义 Redisson 版本 =============================== -->
 
       <dependency>
