--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -73,7 +73,8 @@ jobs:
             ./laokou-common/laokou-common-elasticsearch/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-mybatis-plus/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-starrocks/target/site/jacoco/jacoco.xml,
-            ./laokou-common/laokou-common-ftp/target/site/jacoco/jacoco.xml
+            ./laokou-common/laokou-common-ftp/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-redis/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build the Docker image
         run: |
