--- a/laokou-service/laokou-mcp/laokou-mcp-client/laokou-mcp-client-infrastructure/pom.xml
+++ b/laokou-service/laokou-mcp/laokou-mcp-client/laokou-mcp-client-infrastructure/pom.xml
@@ -111,6 +111,16 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-webmvc</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jetty</artifactId>
     </dependency>
   </dependencies>
 
