--- a/laokou-service/laokou-network/laokou-network-infrastructure/pom.xml
+++ b/laokou-service/laokou-network/laokou-network-infrastructure/pom.xml
@@ -62,6 +62,10 @@
           <groupId>ch.qos.logback</groupId>
           <artifactId>logback-core</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-tomcat</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -78,6 +82,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-plugin</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jetty</artifactId>
     </dependency>
   </dependencies>
 
