--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -72,6 +72,6 @@ jobs:
         </settings>
         EOF
     - name: Build with Maven
-      run: mvn clean package -P dev -DskipTests
+      run: mvn clean package -P dev -DskipTests -U
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v4.31.9
