--- a/laokou-cloud/laokou-nacos/src/main/resources/application.properties
+++ b/laokou-cloud/laokou-nacos/src/main/resources/application.properties
@@ -19,33 +19,17 @@ jasypt.encryptor.password=@SECRET-KEY@
 # 开启请求压缩
 server.compression.enabled=true
 # 工作线程池的最大线程数
-server.jetty.threads.max=5000
+server.tomcat.threads.max=500
 # 工作线程池的最小备用线程数
-server.jetty.threads.min=50
-# 空闲超时时间
-server.jetty.threads.idle-timeout=30s
-# 线程池队列大小
-server.jetty.threads.max-queue-capacity=10000
-# selector线程池大小
-server.jetty.threads.selectors=16
-# accept线程池大小
-server.jetty.threads.acceptors=16
-# 是否开启日志
-server.jetty.accesslog.append=false
-# 访问日志格式
-server.jetty.accesslog.format=ncsa
-# 访问日志保留天数
-server.jetty.accesslog.retention-period=7
+server.tomcat.threads.min-spare=50
 # 最大连接数
-server.jetty.max-connections=50000
-# 表单参数最大数量
-server.jetty.max-form-keys=5000
-# 连接空闲超时时间
-server.jetty.connection-idle-timeout=5m
-# 请求参数最大大小
-server.jetty.max-http-form-post-size=100MB
-# 最大响应头大小
-server.jetty.max-http-response-header-size=32KB
+server.tomcat.max-connections=10000
+# 当所有工作线程都在忙时，允许等待处理的最大连接数
+server.tomcat.accept-count=200
+# uri编码
+server.tomcat.uri-encoding=UTF-8
+# 连接超时时间
+server.tomcat.connection-timeout=60s
 # 应用程序在发生错误时，http 响应中始终返回具体的错误消息
 server.error.include-message=always
 # 关闭证书
@@ -58,6 +42,8 @@ server.shutdown=graceful
 spring.application.name=${SERVICE_ID:laokou-nacos}
 # 环境
 spring.profiles.active=@PROFILE-ACTIVE@
+# 开启虚拟线程
+spring.threads.virtual.enabled=true
 # 不暴露指标到elastic
 management.elastic.metrics.export.enabled=false
 # 不暴露指标到influx
