--- a/laokou-common/laokou-common-core/pom.xml
+++ b/laokou-common/laokou-common-core/pom.xml
@@ -29,7 +29,7 @@
   <artifactId>laokou-common-core</artifactId>
   <version>4.0.1-SNAPSHOT</version>
   <name>laokou-common-core</name>
-  <description>一个企业级微服务架构的云服务多租户IoT平台</description>
+  <description>一个企业级微服务架构的云服务多租户IoT平台【核心模块】</description>
   <url>https://koushenhai.github.io/KCloud-Platform-IoT</url>
   <developers>
     <developer>
@@ -44,7 +44,7 @@
     </developer>
   </developers>
   <scm>
-    <tag>kcloud-platform-iot-4.0.0.RELEASE</tag>
+    <tag>kcloud-platform-iot-4.0.1.RELEASE</tag>
     <url>https://github.com/KouShenhai/KCloud-Platform-IoT</url>
     <connection>scm:git:https://github.com/KouShenhai/KCloud-Platform-IoT.git</connection>
     <developerConnection>scm:git:https://github.com/KouShenhai/KCloud-Platform-IoT.git</developerConnection>
