--- a/laokou-common/laokou-common-i18n/pom.xml
+++ b/laokou-common/laokou-common-i18n/pom.xml
@@ -29,7 +29,7 @@
   <artifactId>laokou-common-i18n</artifactId>
   <version>4.0.1-SNAPSHOT</version>
   <name>laokou-common-i18n</name>
-  <description>一个企业级微服务架构的云服务多租户IoT平台</description>
+  <description>一个企业级微服务架构的云服务多租户IoT平台【I18N国际化模块】</description>
   <url>https://koushenhai.github.io/KCloud-Platform-IoT</url>
   <developers>
     <developer>
@@ -44,7 +44,7 @@
     </developer>
   </developers>
   <scm>
-    <tag>kcloud-platform-iot-4.0.0.RELEASE</tag>
+    <tag>kcloud-platform-iot-4.0.1.RELEASE</tag>
     <url>https://github.com/KouShenhai/KCloud-Platform-IoT</url>
     <connection>scm:git:https://github.com/KouShenhai/KCloud-Platform-IoT.git</connection>
     <developerConnection>scm:git:https://github.com/KouShenhai/KCloud-Platform-IoT.git</developerConnection>
@@ -57,7 +57,6 @@
       <comments>A business-friendly OSS license</comments>
     </license>
   </licenses>
-
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
