--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -31,7 +31,7 @@
   <version>4.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>laokou-common</name>
-  <description>一个企业级微服务架构的云服务多租户IoT平台</description>
+  <description>一个企业级微服务架构的云服务多租户IoT平台【公共模块】</description>
   <url>https://koushenhai.github.io/KCloud-Platform-IoT</url>
   <developers>
     <developer>
@@ -46,7 +46,7 @@
     </developer>
   </developers>
   <scm>
-    <tag>kcloud-platform-iot-4.0.0.RELEASE</tag>
+    <tag>kcloud-platform-iot-4.0.1.RELEASE</tag>
     <url>https://github.com/KouShenhai/KCloud-Platform-IoT</url>
     <connection>scm:git:https://github.com/KouShenhai/KCloud-Platform-IoT.git</connection>
     <developerConnection>scm:git:https://github.com/KouShenhai/KCloud-Platform-IoT.git</developerConnection>
