--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -100,7 +100,7 @@
     <module>laokou-common-ai</module>
     <module>laokou-common-csv</module>
     <module>laokou-common-zookeeper</module>
-    <module>laokou-common-ftp</module>
+    <module>laokou-common-sftp</module>
     <module>laokou-common-websocket</module>
     <module>laokou-common-pulsar</module>
     <module>laokou-common-coap</module>
