--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -111,6 +111,7 @@
     <module>laokou-common-testcontainers</module>
     <module>laokou-common-mongodb</module>
     <module>laokou-common-grpc</module>
+    <module>laokou-common-rpc</module>
   </modules>
 
 </project>
