feat: 增加grpc调用，分为单体和微服务，便于后期微服务切换成单体应用

--- a/laokou-common/laokou-common-rpc/pom.xml
+++ b/laokou-common/laokou-common-rpc/pom.xml
@@ -12,4 +12,12 @@
   <artifactId>laokou-common-rpc</artifactId>
   <version>4.0.1-SNAPSHOT</version>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-distributed-id-proto</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
+
 </project>
