--- a/laokou-service/laokou-distributed-id/laokou-distributed-id-infrastructure/pom.xml
+++ b/laokou-service/laokou-distributed-id/laokou-distributed-id-infrastructure/pom.xml
@@ -60,6 +60,16 @@
       <artifactId>laokou-common-nacos</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.grpc</groupId>
+      <artifactId>spring-grpc-server-web-spring-boot-starter</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.grpc</groupId>
+          <artifactId>grpc-servlet-jakarta</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 
 </project>
