--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -74,6 +74,7 @@ jobs:
             ./laokou-common/laokou-common-mybatis-plus/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-sftp/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-grpc/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-modbus4j/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-redis/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build the Docker image
