--- a/laokou-common/laokou-common-modbus4j/pom.xml
+++ b/laokou-common/laokou-common-modbus4j/pom.xml
@@ -33,6 +33,13 @@
       <scope>test</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-testcontainers</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
