--- a/laokou-common/laokou-common-kafka/pom.xml
+++ b/laokou-common/laokou-common-kafka/pom.xml
@@ -34,6 +34,20 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-kafka</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-testcontainers</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
