--- a/laokou-common/laokou-common-reactor/pom.xml
+++ b/laokou-common/laokou-common-reactor/pom.xml
@@ -28,6 +28,13 @@
       <scope>provided</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <version>${project.version}</version>
+      <optional>true</optional>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
