--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -72,6 +72,7 @@ jobs:
             ./laokou-common/laokou-common-xss/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-csv/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-excel/target/site/jacoco/jacoco.xml,
+            ./laokou-common/laokou-common-idempotent/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-nacos/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-sensitive/target/site/jacoco/jacoco.xml,
             ./laokou-common/laokou-common-secret/target/site/jacoco/jacoco.xml,
