--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,8 @@
     <jsqlparser.version>5.2</jsqlparser.version>
     <!--commons-io-->
     <commons-io.version>2.21.0</commons-io.version>
+    <!--commons-logging版本-->
+    <commons-logging.version>1.3.5</commons-logging.version>
     <!--spotbugs版本-->
     <spotbugs.version>4.9.8</spotbugs.version>
     <!--docker主机-->
@@ -729,6 +731,12 @@
         <artifactId>commons-io</artifactId>
         <version>${commons-io.version}</version>
       </dependency>
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>${commons-logging.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
