--- a/laokou-common/laokou-common-context/pom.xml
+++ b/laokou-common/laokou-common-context/pom.xml
@@ -33,6 +33,10 @@
       <scope>test</scope>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
