--- a/laokou-common/laokou-common-testcontainers/pom.xml
+++ b/laokou-common/laokou-common-testcontainers/pom.xml
@@ -63,6 +63,10 @@
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers-kafka</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers-pulsar</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
