--- a/laokou-service/laokou-oss/laokou-oss-start/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-start/pom.xml
@@ -25,4 +25,17 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
