fix: 测试失败失败，无法构建项目

--- a/laokou-common/laokou-common-pulsar/pom.xml
+++ b/laokou-common/laokou-common-pulsar/pom.xml
@@ -50,6 +50,13 @@
       <optional>true</optional>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>5.18.1</version>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
