--- a/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
@@ -30,7 +30,7 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <artifactId>spring-boot-webmvc</artifactId>
       <scope>test</scope>
       <optional>true</optional>
     </dependency>
