--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
     <elasticsearch.version>9.2.4</elasticsearch.version>
     <!--jakarta.servlet-api版本-->
     <jakarta-servlet-api.version>6.1.0</jakarta-servlet-api.version>
-    <!--fastexcel-->
+    <!--fastexcel版本-->
     <fastexcel.version>1.3.0</fastexcel.version>
     <!--s3版本-->
     <s3.version>2.41.14</s3.version>
