feat: 增加用户登录的数据权限

--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -252,10 +252,10 @@ mybatis-plus:
     db-config:
       column-format: "\"%s\""
   tenant:
+    enabled: false
+  sql-monitor:
     enabled: true
-    ignore-tables:
-      - sys_source
-      - sys_tenant
+    interval: 0
   mapper-locations: classpath*:/mapper/**/*.xml
   configuration:
     log-impl: org.apache.ibatis.logging.nologging.NoLoggingImpl
