style: 优化代码风格

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/application.yml
@@ -168,6 +168,7 @@ mybatis-plus:
     ignore-tables:
       - sys_tenant
       - sys_source
+      - sys_menu
       - sys_package_menu
       - sys_package
   sql-monitor:
