--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -141,7 +141,7 @@ jobs:
           # ========== 构建laokou-gateway-native ==========
           cd /home/runner/work/KCloud-Platform-IoT/KCloud-Platform-IoT/laokou-cloud/laokou-gateway
           # AOT处理
-          mvnd clean install -DskipTests -Pprod spring-boot:process-aot
+          mvnd clean install -DskipTests -Ptest spring-boot:process-aot
           # 构建本地镜像
           mvnd spring-boot:build-image -DskipTests
           # 推送镜像到镜像仓库
