--- a/laokou-cloud/laokou-nacos/src/main/resources/application.properties
+++ b/laokou-cloud/laokou-nacos/src/main/resources/application.properties
@@ -82,6 +82,8 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 nacos.console.port=${NACOS_CONSOLE_PORT:8048}
 # nacos\u670D\u52A1\u4E3B\u7AEF\u53E3
 nacos.server.main.port=${NACOS_SERVER_PORT:8848}
+# mcp\u6CE8\u518C\u7AEF\u53E3
+nacos.ai.mcp.registry.port=${NACOS_MCP_REGISTRY_PORT:9080}
 # nacos\u670D\u52A1\u4E0A\u4E0B\u6587\u8DEF\u5F84
 nacos.server.contextPath=/nacos
 # nacos\u670D\u52A1\u63A7\u5236\u53F0\u4E0A\u4E0B\u6587\u8DEF\u5F84
@@ -92,13 +94,16 @@ nacos.console.remote.server.context-path=/nacos
 nacos.core.auth.admin.enabled=true
 # \u63A7\u5236\u53F0\u662F\u5426\u542F\u7528\u8BA4\u8BC1
 nacos.core.auth.console.enabled=true
+# \u91C7\u7528\u4E25\u683C\u6A21\u5F0F\uFF0C\u5F00\u542F\u540E\uFF0C\u5F53raft\u65E0\u6CD5\u9009\u4E3E\u65F6\uFF0C\u5F15\u64CE\u7684readiness\u63A5\u53E3\u5C06\u8FD4\u56DE500
+nacos.core.protocol.raft.strict_mode=true
 # \u662F\u5426\u542F\u7528kubernetes\u540C\u6B65\uFF0Cfalse\u8868\u793A\u4E0D\u542F\u7528
 nacos.k8s.sync.enabled=false
 # \u90E8\u7F72\u6A21\u5F0F
-# standalone\uFF1A\u5355\u673A\u6A21\u5F0F
-# cluster\uFF1A\u96C6\u7FA4\u6A21\u5F0F
+# server\uFF1A\u670D\u52A1\u6A21\u5F0F
+# console\uFF1A\u63A7\u5236\u53F0\u6A21\u5F0F
+# serverWithMcp\uFF1A\u670D\u52A1\u6A21\u5F0F\uFF0C\u542F\u7528mcp\u529F\u80FD
 # merged\uFF1A\u5408\u5E76\u6A21\u5F0F\uFF08nacos\u652F\u6301config+naming\u6A21\u5757\u5408\u5E76\u90E8\u7F72\uFF0C\u9ED8\u8BA4\u63A8\u8350\u65B9\u5F0F\uFF09
-nacos.deployment.type=merged
+nacos.deployment.type=${NACOS_DEPLOYMENT_TYPE:merged}
 # \u5355\u4E2A\u5BA2\u6237\u7AEF\u6700\u591A\u80FD\u8BA2\u960520\u4E2A\u6A21\u7CCA\u5339\u914D\u6A21\u5F0F\uFF08\u7528\u4E8E\u670D\u52A1\u53D1\u73B0\uFF09
 nacos.naming.fuzzy.watch.max.pattern.count=20
 # \u6BCF\u4E2A\u6A21\u7CCA\u6A21\u5F0F\u6700\u591A\u80FD\u5339\u914D500\u4E2A\u670D\u52A1
@@ -107,6 +112,8 @@ nacos.naming.fuzzy.watch.max.pattern.match.service.count=500
 nacos.config.fuzzy.watch.max.pattern.count=20
 # \u6BCF\u4E2A\u6A21\u7CCA\u6A21\u5F0F\u6700\u591A\u80FD\u5339\u914D500\u4E2A\u914D\u7F6E\u9879
 nacos.config.fuzzy.watch.max.pattern.match.config.count=500
+# nacos\u65E5\u5FD7\u6587\u4EF6\u8DEF\u5F84
+nacos.log.path=${NACOS_LOG_PATH:./logs/nacos}
 # \u6307\u5B9A\u6570\u636E\u5E93\u7C7B\u578B
 spring.sql.init.platform=${NACOS_DS_PLATFORM:postgresql}
 # \u6570\u636E\u5E93\u6570\u91CF\uFF0C\u8BF7\u6309\u7167\u4F5C\u8005\u7684\u6765\uFF0C\u8BF7\u4E0D\u8981\u778E\u51E0\u628A\u6539
@@ -134,5 +141,5 @@ db.pool.config.validation-timeout=10000
 db.pool.config.maximum-pool-size=50
 # \u6570\u636E\u5E93\u9A71\u52A8
 db.pool.config.driver-class-name=${NACOS_DS_DRIVER:org.postgresql.Driver}
-# \u91C7\u7528\u4E25\u683C\u6A21\u5F0F\uFF0C\u5F00\u542F\u540E\uFF0C\u5F53raft\u65E0\u6CD5\u9009\u4E3E\u65F6\uFF0C\u5F15\u64CE\u7684readiness\u63A5\u53E3\u5C06\u8FD4\u56DE500
-nacos.core.protocol.raft.strict_mode=true
+# \u6307\u5B9A\u65E5\u5FD7\u914D\u7F6E\u6587\u4EF6\u8DEF\u5F84
+logging.config=classpath:logback-spring.xml
