--- a/pom.xml
+++ b/pom.xml
@@ -845,8 +845,8 @@
         <DS-DRIVER>org.postgresql.Driver</DS-DRIVER>
         <DS-PLATFORM>postgresql</DS-PLATFORM>
         <NACOS-NAMESPACE>0dac1a68-2f01-40df-bd26-bf0cb199057a</NACOS-NAMESPACE>
-        <NACOS-DISCOVERY-ADDRESS>nacos:8848</NACOS-DISCOVERY-ADDRESS>
-        <NACOS-CONFIG-ADDRESS>nacos:8848</NACOS-CONFIG-ADDRESS>
+        <NACOS-DISCOVERY-ADDRESS>nacos:8848,nacos:8858,nacos:8868</NACOS-DISCOVERY-ADDRESS>
+        <NACOS-CONFIG-ADDRESS>nacos:8848,nacos:8858,nacos:8868</NACOS-CONFIG-ADDRESS>
         <NACOS-GROUP>IOT_GROUP</NACOS-GROUP>
         <NACOS-USERNAME>nacos</NACOS-USERNAME>
         <NACOS-PASSWORD>nacos</NACOS-PASSWORD>
@@ -868,8 +868,8 @@
         <DS-DRIVER>org.postgresql.Driver</DS-DRIVER>
         <DS-PLATFORM>postgresql</DS-PLATFORM>
         <NACOS-NAMESPACE>a61abd4c-ef96-42a5-99a1-616adee531f3</NACOS-NAMESPACE>
-        <NACOS-DISCOVERY-ADDRESS>nacos:8848</NACOS-DISCOVERY-ADDRESS>
-        <NACOS-CONFIG-ADDRESS>nacos:8848</NACOS-CONFIG-ADDRESS>
+        <NACOS-DISCOVERY-ADDRESS>nacos:8848,nacos:8858,nacos:8868</NACOS-DISCOVERY-ADDRESS>
+        <NACOS-CONFIG-ADDRESS>nacos:8848,nacos:8858,nacos:8868</NACOS-CONFIG-ADDRESS>
         <NACOS-GROUP>IOT_GROUP</NACOS-GROUP>
         <NACOS-USERNAME>nacos</NACOS-USERNAME>
         <NACOS-PASSWORD>nacos</NACOS-PASSWORD>
@@ -897,9 +897,9 @@
         <!--suppress UnresolvedMavenProperty -->
         <NACOS-NAMESPACE>${NACOS_NAMESPACE:8140e92b-fb43-48f5-b63b-7506185206a5}</NACOS-NAMESPACE>
         <!--suppress UnresolvedMavenProperty -->
-        <NACOS-DISCOVERY-ADDRESS>${NACOS_DISCOVERY_ADDRESS:nacos:8848}</NACOS-DISCOVERY-ADDRESS>
+        <NACOS-DISCOVERY-ADDRESS>${NACOS_DISCOVERY_ADDRESS:nacos:8848,nacos:8858,nacos:8868}</NACOS-DISCOVERY-ADDRESS>
         <!--suppress UnresolvedMavenProperty -->
-        <NACOS-CONFIG-ADDRESS>${NACOS_CONFIG_ADDRESS:nacos:8848}</NACOS-CONFIG-ADDRESS>
+        <NACOS-CONFIG-ADDRESS>${NACOS_CONFIG_ADDRESS:nacos:8848,nacos:8858,nacos:8868}</NACOS-CONFIG-ADDRESS>
         <!--suppress UnresolvedMavenProperty -->
         <NACOS-GROUP>${NACOS_GROUP:IOT_GROUP}</NACOS-GROUP>
         <!--suppress UnresolvedMavenProperty -->
